--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ Calculator/Debug/out2.o
 Calculator/functions.c
 Calculator/out.c
 Calculator/out2.c
+Last Loaded Schematic.pdsbak
+Schematic.pdsprj.EZZEDIN.ezz_a.workspace
+TcfTransactionLog.csv
